# gridco-energy-market-settlement-dashboard

./: Dockerfile  README.md  STRUCTURE.md  _app.py  app.py  data_loader.py  lab.ipynb  main.py  pyproject.toml
assets/: styles.css
callbacks/: __init__.py  analysis_chosen.py  build_table.py  consumer_analysis.py  data_loader.py  gen_mix_ipps.py  metrics.py  plant_generation_profiles.py  time_series.py  upload.py  utitls.py
ui/: __init__.py  consumption_analysis.py  dashboard.py  generation_analysis.py  input.py  metrics.py  summary_analysis.py  upload.py
