[project]
name = "gencon"
version = "0.1.0"
description = "Energy market analysis for Ghana Grid Company"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "numpy>=2.0.0",
    "dash-bootstrap-components>=1.6.0",
    "plotly>=5.24.0",
    "fastparquet>=2024.11.0",
    "openpyxl>=3.1.5",
    "dash[async]>=3.2.0",
    "dash-mantine-components>=2.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "nbformat>=5.10.4",
]
